--- a/package.json
+++ b/package.json
@@ -33,6 +33,5 @@
     "globals": "^15.15.0",
     "vite": "^6.2.0"
   },
-  "homepage": "https://mattywaves.github.io/mattywaves",
-  
+  "homepage": "https://mattywaves.github.io/mattywaves"
 }
