--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "mattywaves",
+  "homepage": "https://mattywaves.com",
+  "description": "mattywaves.com is a personal website and blog for Matty Waves",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -33,5 +35,5 @@
     "globals": "^15.15.0",
     "vite": "^6.2.0"
   },
-  "homepage": "https://mattywaves.github.io/mattywaves"
+  
 }
