--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mattywaves",
-  "homepage": "https://mattywaves.com",
+  "homepage": "https://lucashunter.ca/mattywaves",
   "private": true,
   "version": "0.0.0",
   "type": "module",
